Fixing z-index user dropdown

--- a/src/components/NavBar/Navigation/Dropdown/Dropdown.css
+++ b/src/components/NavBar/Navigation/Dropdown/Dropdown.css
@@ -10,7 +10,7 @@
   text-align: center;
   box-shadow: 4px 4px 8px 0px rgba(0, 0, 0, 0.2), -1px -1px 0px 0px rgba(255, 255, 255, 0.1);
   border-radius: 15px;
-  z-index: 2;
+  z-index: 10;
 }
 
 .dropdown-menu li {
